--- a/src/index.scss
+++ b/src/index.scss
@@ -14,3 +14,6 @@
   font-family: popins-smBold;
   src: url("./assets/Fonts/Poppins-SemiBold.ttf");
 }
+
+* {
+}
